# PrivateGPT

./: Dockerfile  README.md  app.py  config.py  models.py  pyproject.toml
assistants/: analista.txt  artista.txt  create.sh  dublador.txt  roteirista.txt
routes/: __init__.py  assistant.py  main.py  messages.py
static/: chat.js  styles.css
templates/: index.html
